--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-Django
-gunicorn
+asgiref==3.9.1
+Django==4.2.23
+psycopg2-binary==2.9.10
+sqlparse==0.5.3
+typing_extensions==4.14.1
+tzdata==2025.2
